chat-app/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-app
  namespace: chat-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chat.noahsark.me`)
      services:
        - name: chat-app
          port: 3000
  tls:
    secretName: chat-app-tls
